force-app/main/default/objects/copado__JobStep__c/validationRules/copado__Template_OR_Execution_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Template_OR_Execution_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( copado__JobTemplate__c ), ISBLANK(  copado__JobExecution__c  ) )</errorConditionFormula>
    <errorMessage>JobTemplate or Execution is required</errorMessage>
</ValidationRule>